@@ -21,6 +21,7 @@ SEXP lmer_coefGets(SEXP x, SEXP coef, SEXP Unc);
 SEXP lmer_fixef(SEXP x);
 SEXP lmer_ranef(SEXP x);
 SEXP lmer_ECMEsteps(SEXP x, SEXP nsteps, SEXP REMLp, SEXP Verbp);
+SEXP lmer_fitted(SEXP x, SEXP mmats, SEXP useRf);
 SEXP lmer_gradient(SEXP x, SEXP REMLp, SEXP Uncp);
 SEXP lmer_variances(SEXP x);
 SEXP lmer_Crosstab(SEXP flist);
